7 - Database Connection Issues

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,8 +30,8 @@ services:
       - POSTGRES_DB=timescaledb
     ports:
       - "5432:5432"
-    expose:
-      - 5432
+    # expose:
+    #   - 5432
     volumes:
       - timescaledb_data:/var/lib/postgresql/data
 
